[workspace]
members = [
    ".",
    "rbatis-xml-parser",
    "rbatis-sql-macro",
    "example"
]

[package]
name = "rbatis_sql"
version = "3.0.18"
description = "Rust Json Object access macro"
authors = ["zhuxiujie <zhuxiujia@qq.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
#default is fast_mode
default = []
debug_mode = ["rbatis_sql_macro/debug_mode"]

[dependencies]
#serde
serde = { version = "1", features = ["derive"] }
rbson = "2.0.3"
dashmap = { version = "4" }
rbatis_sql_macro = { version = "3.0", path = "rbatis-sql-macro" }
base64 = "0.13"
async-trait = "0.1"