[package]
name = "rbatis_sql_macro"
version = "2.0.11"
authors = ["zxj_pc <zhuxiujia@qq.com>"]
edition = "2018"
license = "Apache-2.0"
description = "rbatis sql  宏系统支持"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug_mode=[]
[lib]
proc-macro = true
[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = {version="1.0.68",features=["full"]}

base64 = "0.13"
xml-rs = "0.8"
html_parser = "0.6.2"
async-trait = "0.1"
url = "2.2.2"